- added new buttons (export, sort (white) and flush) - improved some aligning issues
git-svn-id: http://svn.dotprojects.be/svn/bagel/trunk@268 024ce27e-8b1b-0410-8673-da5fc5b43585

--- a/assets/stylesheets/bluegel/overlay.css
+++ b/assets/stylesheets/bluegel/overlay.css
@@ -225,3 +225,13 @@
 			padding-top: 30px;
 			font-size: 13px;
 		}
+
+		div.bigPopup div.dontCloseBox
+		{
+			position: absolute;
+			right: 12px;
+			top: 250px;
+			width: 125px;
+		}
+		div.bigPopup div.dontCloseBox input { float: right; }
+		
